--- a/style.css
+++ b/style.css
@@ -9,26 +9,20 @@ h1 {
     width: 30px;
 }
 
-a {
-    font-size: 25px;
-    color: #FF3CEA;
-    text-align: center;
-}
-
 body {
     text-align: left;
 }
 
-img {
+/* img {
     max-height: 20%;
     max-width: 25%;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
-#index-ul {
+/* #index-ul {
     text-align: center;
-}
+} */
 
 h4 {
     text-decoration: underline;
@@ -70,6 +64,47 @@ h4 {
 #banner-yellow-text {
     color: yellow;
     font-weight: bold;
+}
+
+#babish-img {
+    max-width: 800px;
+    max-height: 533px;
+    margin-left: 5%;  
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: inline-block;
+}
+
+#trending {
+    display: inline-block;
+    text-align: center;
+    background-color: #D3D3D6;
+    width: 400px;
+    height: 533px;
+    vertical-align: top;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 15px;
+    margin-left: 30px;
+}
+
+.small-img {
+    width: 144px;
+    height: 95px;
+    float: left;
+    margin-right: 1px;
+    margin-left: 0px;
+    margin-bottom: 10px;
+}
+
+.link-next-to-img {
+    display: inline-block;
+}
+
+.trending-item {
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
 }
 
 
