--- a/style.css
+++ b/style.css
@@ -9,21 +9,6 @@ h1 {
     width: 30px;
 }
 
-body {
-    text-align: left;
-}
-
-/* img {
-    max-height: 20%;
-    max-width: 25%;
-    margin-left: auto;
-    margin-right: auto;
-} */
-
-/* #index-ul {
-    text-align: center;
-} */
-
 h4 {
     text-decoration: underline;
 }
@@ -105,6 +90,12 @@ h4 {
     display: inline-block;
     vertical-align: top;
     width: 100%;
+}
+
+.food-image {
+    max-width: 15%;
+    max-height: 40%;
+    margin-left: 43%;
 }
 
 
